--- a/app/views/shared/_pixelator.html.haml
+++ b/app/views/shared/_pixelator.html.haml
@@ -1,12 +1,13 @@
 -if Pixelator.run_envs.include?(Rails.env)
-  - @pixel_types ||= ['all']
+  - pixel_types ||= []
+  - types = ['all'].concat(pixel_types).concat(@pixel_types || []).uniq
   - @scope ||= ''
 
   :javascript
     (function() {
       $(document).ready(function() {
         var pixelator = new Pixelator(PIXEL_DATA, '#{@scope}');
-        _.each(#{@pixel_types}, function(p) {
+        _.each(#{types}, function(p) {
           pixelator.run(p);
         });
       });
@@ -14,7 +15,8 @@
 -else
   :javascript
     if (typeof(console) === "object" && typeof(console.log) === "function") {
-      console.log("NOTICE: Pixelator is OFF. Go to #{__FILE__} to turn on.");
+      console.log("NOTICE: Pixelator is OFF. Go to #{__FILE__} to turn on.\n" +
+        "It would run: #{types} for #{@scope}");
     }
 
 
